# MongoDB-Performance-Lab

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  Dockerfile  MCP_PLAN.md  README.md  WORKFLOW_AGENT_PROMPT.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
docs/: DSL-IMPLEMENTATION.md  DSL-SPEC.md  HOME.md  METRICS.md  README.md  SNAPSHOT-MODE.md
docs/demos/: future-demo-ideas.md  index-performance.md  overindexing.md
examples/: README.md  custom_benchmark.py
mcp/: server.py
src/mdbpl/: __init__.py  __main__.py  api.py  cli.py  distributions.py  executor.py  generator.py  storage.py  workload.py  ycsb.py  ycsb_wrapper.py
src/mdbpl/demos/: __init__.py  aggregation_pipeline.py  base.py  compound_index.py  covering_index.py  index_performance.py  index_performance.py.backup  lookup.py  overindexing.py
src/mdbpl/dsl/: __init__.py  compiler.py  loader.py  models.py
src/mdbpl/frontend/: __init__.py  dash_app.py
src/mdbpl/frontend/assets/: custom.css
src/mdbpl/workloads/: __init__.py  balanced.py  group_by.py  insert.py  mixed.py  point_read.py  range_scan.py  raw.py  read_heavy.py  top_n.py  update.py  write_heavy.py
tests/: test_workload_api.py
workloads/: balanced.yaml  compound-index-test.yaml  range-scan.yaml  read-heavy.yaml  write-heavy.yaml
workloads/examples/: ecommerce-snapshot.yaml
